== 1.0.7 / 2009-09-08
* Steps now include the commandline (if there) in their name - makes the logs more readable
== 1.0.6 / 2009-09-04
* The run context is now passed to the runner and subsequently to the TestStep#run method
	This way you can pass informaton to the command being run (context contains information on the start time of the run, the spec filename as well as any information added in the configuration) 
* Minor bugfix in the activerecord reporter to avoid crashes due to nil runner states
* The runner adds the current scenario name to the context passed
== 1.0.5 / 2009-07-16
* Updated gem dependencies to use activerecord 2.3.2
* A failure of the check test now passes all test stati (as not_executed). This will not skew statistics that show the trends on test numbers
* Setup and teardown are no longer executed for check tests
* fixed bug in element_prompt where a negative answer would not set an error
* TextReporter now shows the failed tests first, followed by tests with warnings, not executed tests and finally the successes. This gives a better overview of the important bits
* removed require "rubygems" from library code
== 1.0.4 / 2008-11-7
* Added functionality that allows ignoring the result of a step. The step is considered always successful
== 1.0.3 / 2008-10-28
* The name of the configuration file is added in the context information - can be used to group results together in cases where there are multiple configurations
* Context is now stored as a Hash
* EmailReporter now displays a footer as defined in it's configuration
== 1.0.2 / 2008-10-23
* Bugfix in ActiveRecordReporter: \000 sequences produce exceptions when inserting.
* Output and error from commands is now more strictly sanitized.
== 1.0.1 / 2008-10-13
* rutema_upgrader - Bug: update not performed - fixed
== 1.0.0 / 2008-10-06
* DB schema change: title and description added to scenario table
* footer parameter for the email reporter
* Specification titles included in the text reports